# packages/contracts/openapi/patchpilot.openapi.json
@@ -1673,6 +1673,17 @@
             "items": {
               "type": "string"
             }
+          },
+          "lastRunId": {
+            "type": "string",
+            "minLength": 1
+          },
+          "lastTestRunId": {
+            "type": "string",
+            "minLength": 1
+          },
+          "flaky": {
+            "type": "boolean"
           }
         }
       },
